Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- When browsing for a new document when creating, and error occured. (#1443)
- Two properties had the same label. (#1445)
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-