@@ -343,7 +343,8 @@ class CPSCalendarTool(UniqueObject, PortalFolder):
         brains = ZCatalog.searchResults(self.portal_catalog,
                  meta_type='Calendar')
         if brains:
-            return [brain.getObject() for brain in brains]
+            calendars = [brain.getObject() for brain in brains]
+            return [each for each in calendars if each] # Filter any empty entries.
         else:
             return []
 
