@@ -8,6 +8,8 @@ Bug fixes:
 ~~~~~~~~~~
 - When browsing for a new document when creating, and error occured. (#1443)
 - Two properties had the same label. (#1445)
+- listCalendars now filter the search results to remove any empty entries. (#1442)
+- The document link was dropped when creating an event. (#1447)
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
